<resources xmlns:tools="http://schemas.android.com/tools">

    // App

    <string name="app_name">PDF View</string>
    <string name="app_landscape">Landscape</string>
    <string name="app_share_file">Choose file with:</string>


    // App titles

    <string name="app_portrait">Portrait</string>


    // Snackbar // Toasts

    <string name="toast_yes">OK</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_successfully">PDF successfully created.</string>
    <string name="toast_successfully_not">An error occurred.</string>
    <string name="toast_open">Open?</string>
    <string name="toast_install_app">Please install an app to perform action.</string>
    <string name="toast_noPDF">Choose or create a PDF file.</string>
    <string name="toast_extension">No supported file extension</string>


    // Main menu

    <string name="action_share">Share PDF</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_with">Share PDF with:</string>
    <string name="action_share_Text">In the attachment you can find the PDF file:</string>


    // Fragments


    // Text fragment


    // Image fragment


    // Editor


    // Dialogs

    <string name="choose_title">Edit filename</string>


    // Settings

    <string name="settings_prefApp">About the app</string>

    <string name="pref_license">License</string>
    <string name="pref_license_summary">The app is completely open source and licensed under GPL3.</string>

    <string name="pref_imageQuality">Image quality</string>
    <string name="pref_imageQuality_summary">Set the image quality. Higher quality results in (much) bigger PDF sizes.</string>

    <string name="pref_backup">Backup</string>
    <string name="pref_backup_summary">Do you want to backup pdf files before manipulating, e.g. deleting or adding pages?</string>

    <string name="pref_folder">Custom directory</string>
    <string name="pref_folder_summary">Let empty to use the default directory (\"/Android/data/de.baumann.pdf/\"). Enter the path
        to your desired folder on your sdcard. The path must begin and end with \"/\" like \"/Download/PDF/\".
        If the desired directory does not exist, it will be generated automatically.</string>

    <string name="action_donate">Donate</string>
    <string name="action_donate_summary">If you like the app, you can donate to me via Paypal.</string>

    <string name="action_changelog">Changelog</string>
    <string name="action_changelog_summary">See what\'s new … (will open a website)</string>

    <string name="pref_notShow_title">Help dialog</string>
    <string name="pref_notShow_title_summary">Show the help dialog on start.</string>

    <string name="action_openSettings">App info</string>
    <string name="action_openSettings_summary">Open via the system settings the app info of the app. There you can,
        depending on your Android version, manage several things (Storage, network traffic, permissions, …).</string>

    <string-array name="listArrayImage">
        <item>High (100%)</item>
        <item>Normal (80%)</item>
        <item>Low (60%)</item>
    </string-array>

    <string-array name="listValuesImage">
        <item>100</item>
        <item>80</item>
        <item>60</item>
    </string-array>


    //Image cropper


    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="search">Search</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="ink">Ink</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="toggle_reflow_mode" translatable="false">Toggle reflow mode</string>
    <string name="version" translatable="false">1.9</string>
    <string name="action_folderPDF">Open folder</string>
    <string name="action_folderPDF_toast">No correct path. Open app folder?</string>


    <string name="toast_remove_confirmation">Entry will be removed. OK?</string>
    <string name="toast_directory">Can\'t open Directory.</string>
    <string name="toast_files">No files in directory.</string>


    //File chooser

    <string name="choose_menu_2">Share</string>
    <string name="choose_menu_3">Rename</string>
    <string name="choose_menu_4">Delete</string>

    <string name="choose_hint">New filename</string>

    <string name="action_sort">Sort entries</string>
    <string name="action_sort_title">Sort by title</string>
    <string name="action_sort_create">Sort by date</string>
    <string name="action_sort_ext">Sort by extension</string>

    <string name="action_filter_title">Search in titles</string>
    <string name="action_filter_create">Search in creation dates</string>
    <string name="action_filter_ext">Search in extensions</string>

    <string name="filter_today">Today</string>
    <string name="filter_yesterday">Yesterday</string>
    <string name="filter_before">Day before yesterday</string>
    <string name="filter_month">This month</string>
    <string name="filter_own">Own search</string>
    <string name="filter_clear">Cancel search</string>

    <string name="sort_title">title</string>
    <string name="sort_date">date</string>
    <string name="sort_extension">extension</string>

    <string name="choose_titleMain">Files</string>
    <string name="title_hint">Title</string>

</resources>
